--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button-triple">
+                <button class="calc-button triple">
                     0
                 </button>
                 <button class="calc-button">
