--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     6
                 </button>
                 <button class="calc-button">
-                    &minus;;
+                    &minus;
                 </button>
             </div>
 
